<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".screens.display.DisplayActivity"
    android:background="@color/darker_color"
    android:orientation="vertical"

  >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">
        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/menu_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:attr/selectableItemBackground"
            app:layout_constraintVertical_bias="0.03"
            app:layout_constraintHorizontal_bias="0"
            android:src="@drawable/back_button_drawable"
            android:importantForAccessibility="no"
            android:layout_gravity="start"
            android:layout_marginStart="15dp"
            />

        <TextView
            android:id="@+id/text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/back_button"
            app:layout_constraintEnd_toStartOf="@id/slideShow"
            app:layout_constraintTop_toTopOf="@id/back_button"
            app:layout_constraintBottom_toBottomOf="@id/back_button"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@color/white_color"
            android:text="@string/display_title"
            android:fontFamily="monospace"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="1"/>

        <ImageView
            android:id="@+id/slideShow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/menu_view"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:attr/selectableItemBackground"
            app:layout_constraintVertical_bias="0.03"
            app:layout_constraintHorizontal_bias="1"
            android:src="@drawable/menu_item_slideshow"
            android:importantForAccessibility="no"
            android:layout_gravity="end"
            android:layout_marginEnd="15dp"/>

    </LinearLayout>

<!--    <com.google.android.gms.ads.AdView-->
<!--        android:id="@+id/displayAdViewTop"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="center"-->
<!--        ads:adSize="BANNER"-->
<!--        ads:adUnitId="@string/banner_ad_id2"-->
<!--        android:layout_marginTop="15dp"/>-->

    <com.hope.igb.footballtime.adhelper.adnaitive.TemplateView
        android:id="@+id/displayAdView"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:gnt_template_type="@layout/gnt_small_template_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="invisible"
        />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/displayViewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text"
        app:layout_constraintBottom_toTopOf="@id/menu_view"
        android:layout_marginTop="15dp"
        android:layout_weight="1"
        />




    <LinearLayout
        android:id="@+id/menu_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:visibility="visible"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:paddingVertical="7dp"
        android:layout_marginHorizontal="11dp"
        >

        <!-- Put view you like -->

        <TextView
            android:id="@+id/menu_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:attr/selectableItemBackground"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            app:drawableTopCompat="@drawable/menu_item_download"
            android:textColor="@color/white_color"
            android:textSize="12sp"
            android:text="@string/save"
            android:drawablePadding="3dp"
            android:fontFamily="sans-serif-condensed-medium"/>

        <TextView
            android:id="@+id/menu_share"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:attr/selectableItemBackground"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            app:drawableTopCompat="@drawable/menu_item_share"
            android:textColor="@color/white_color"
            android:textSize="12sp"
            android:text="@string/share"
            android:drawablePadding="3dp"
            android:fontFamily="sans-serif-condensed-medium"/>

        <TextView
            android:id="@+id/menu_homeScreen"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:attr/selectableItemBackground"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            app:drawableTopCompat="@drawable/menu_item_set_wallpaper"
            android:textColor="@color/white_color"
            android:textSize="12sp"
            android:text="@string/home_screen"
            android:drawablePadding="3dp"
            android:fontFamily="sans-serif-condensed-medium"/>

        <TextView
            android:id="@+id/menu_lock"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:attr/selectableItemBackground"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            app:drawableTopCompat="@drawable/menu_item_lockscreen"
            android:textColor="@color/white_color"
            android:textSize="12sp"
            android:text="@string/lock_screen"
            android:drawablePadding="3dp"
            android:fontFamily="sans-serif-condensed-medium"/>


        <TextView
            android:id="@+id/menu_jump"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:attr/selectableItemBackground"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            app:drawableTopCompat="@drawable/menu_item_jump"
            android:textColor="@color/white_color"
            android:textSize="12sp"
            android:text="@string/jump"
            android:drawablePadding="3dp"
            android:fontFamily="sans-serif-condensed-medium"/>

    </LinearLayout>

            <com.google.android.gms.ads.AdView
                android:id="@+id/displayAdViewBottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner_ad_id2"
                android:layout_marginBottom="5dp"/>

<!--    <LinearLayout-->
<!--        android:id="@+id/adsContainer"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="107dp"-->
<!--        android:layout_gravity="center"-->
<!--        android:gravity="center"-->
<!--        android:orientation="vertical"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent">-->

<!--        <com.google.android.gms.ads.AdView -->
<!--            xmlns:ads="http://schemas.android.com/apk/res-auto"-->
<!--            android:id="@+id/displayAdViewTop"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center"-->
<!--            android:layout_marginBottom="7dp"-->
<!--            ads:adSize="BANNER"-->
<!--            ads:adUnitId="@string/banner_ad_id1" />-->

<!--        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"-->
<!--            android:id="@+id/displayAdViewBottom"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center"-->
<!--            ads:adSize="BANNER"-->
<!--            ads:adUnitId="@string/banner_ad_id2" />-->
<!--    </LinearLayout>-->








</LinearLayout>